[package]
name = "dart_fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsa = { version = "0.7", features = ["pem"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.13"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
md-5 = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
prost = "0.14"
prost-types = "0.14"
serde_urlencoded = "0.7"
urlencoding = "2.1"
chrono = "0.4"
futures = "0.3"
gtfs-realtime = "0.2.0"
